# qrb_ros_simulation

./: CHANGELOG.md  README.md  meshes_download.sh
.github/workflows/: build-check-ros.yaml  build-check-sdk.yaml
dockerfile/: qrb_ros_simulation.dockerfile
qrb_ros_sim_description/: CMakeLists.txt  package.xml
qrb_ros_sim_description/urdf/orbbec_cameras/: gemini335_336.urdf.xacro
qrb_ros_sim_description/urdf/qrb_robot_base/: inertia_macros.xacro  material_macros.xacro  qrb_robot_base.urdf  qrb_robot_base_mini.urdf
qrb_ros_sim_description/urdf/rml_63_gripper_arm/: gripper.urdf  rml_63.urdf
qrb_ros_sim_description/worlds/: warehouse.sdf
qrb_ros_sim_gazebo/: CMakeLists.txt  package.xml
qrb_ros_sim_gazebo/config/: qrb_mobile_manipulator_launch_config.yaml  qrb_robot_base_launch_config.yaml  qrb_robot_base_mini_launch_config.yaml  rml_63_gripper_launch_config.yaml
qrb_ros_sim_gazebo/config/params/: depth_camera_params.yaml  imu_params.yaml  qrb_robot_base_laser_params.yaml  qrb_robot_base_mini_laser_params.yaml  rgb_camera_params.yaml  rml_63_ros2_controllers.yaml  ros2_controllers.yaml
qrb_ros_sim_gazebo/launch/: gazebo_mobile_manipulator.launch.py  gazebo_mobile_manipulator_load_controller.launch.py  gazebo_rml_63_gripper.launch.py  gazebo_rml_63_gripper_load_controller.launch.py  gazebo_robot_base.launch.py  gazebo_robot_base_mini.launch.py
qrb_ros_sim_gazebo/urdf/: gazebo_qrb_mobile_manipulator_robot.urdf.xacro  gazebo_qrb_robot_base.urdf.xacro  gazebo_qrb_robot_base_mini.urdf.xacro  gazebo_rml_63_gripper.urdf.xacro
qrb_ros_sim_gazebo/urdf/xacro/: gazebo_depth_camera.xacro  gazebo_imu.xacro  gazebo_lidar.xacro  gazebo_qrb_robot_base_diff_drive.xacro  gazebo_qrb_robot_base_joint_state_pub.xacro  gazebo_rgb_camera.xacro  rml_63_gripper_ros2_control.xacro
scripts/: docker_build.sh  docker_run.sh  meshes_download.sh
