<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_sim_gazebo</name>
  <version>1.0.0</version>
  <description>
     gazebo configuration ros2 package for Qualcomm robotic models
  </description>
  <maintainer email="weijshen@qti.qualcomm.com">Weijie Shen</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
